# crocodel

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
config/crocodel_LR_config_files/: croc_config_toi-3785b_G395.yaml  croc_config_toi-421c_G395.yaml
config/crocodel_config_files/: croc_config_tauboo.yaml
config_files/: croc_config.yaml  croc_config_for_KpVsys_fix_model_or_fix_params.yaml  croc_config_igrins_wasp122b_scrtp.yaml  croc_config_tauboo.yaml  croc_config_tauboo_eq_chem.yaml  croc_config_wasp122b.yaml  croc_config_wasp122b_eq_chem.yaml  croc_config_wasp122b_eq_chem_MAIN.yaml  croc_config_wasp122b_eq_chem_MAIN_Blackbody.yaml  croc_config_wasp122b_eq_chem_MadhusudhanSeager_MAIN.yaml  croc_config_wasp122b_eq_chem_wide_boundary_P_nodes_MAIN.yaml  croc_config_wasp122b_free_chem_co_h2o_oh_h2o_MadhusudhanSeager_MAIN.yaml  croc_config_wasp122b_free_chem_co_h2o_oh_h2o_dissociation_MAIN.yaml  croc_config_wasp122b_free_chem_h2o_dissociation_MAIN.yaml  croc_config_wasp122b_free_chem_less_species_h2o_dissociation_MAIN.yaml  croc_config_wasp122b_h2o_dissociation.yaml  croc_config_wasp122b_rcte_fix_params.yaml  data_parsing_config_wasp122b.yaml
crocodel/ccf/: astro_utils.py  cross_correlation_utils.py  data.py  model.py  (+1 more)
crocodel_config_files/: croc_config_for_KpVsys_fix_model_or_fix_params.yaml  croc_config_wasp122b_eq_chem.yaml  croc_config_wasp193b_KpVsys_fixed_params.yaml
scripts/: compute_FpFs_BB.py  compute_KpVsys_maps_fixed_params.py  compute_optimal_N_PCA.py  create_spdatacubes.py  plot.py  postprocess_multinest.py  run_crocodel.py
(+72 files in other folders)
