[project]
name = "crocodel"
version = "0.0.1"
description = "High-resolution cross-correlation spectroscopy retrievals of exoplanet atmospheres."
authors = [{ name = "Vatsal Panwar" }]
license = "MIT"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = ['numpy', 'astropy', 'scipy', 
                      'matplotlib', 'tqdm', 'pyyaml', 'pyfastchem',
                      'corner', 'jax' ]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crocodel"]

[tool.hatch.metadata]
allow-direct-references = true
